[gd_scene load_steps=10 format=3 uid="uid://seo6w0nnxdql"]

[ext_resource type="Theme" uid="uid://csi604a0328au" path="res://src/theme.tres" id="1_sdxuo"]
[ext_resource type="Script" path="res://src/UI/title_screen.gd" id="2_fqmvn"]
[ext_resource type="PackedScene" uid="uid://bmen4pi0ult14" path="res://src/tilemap/tile_map.tscn" id="3_jbddq"]
[ext_resource type="Texture2D" uid="uid://dhdcrre50g3xm" path="res://assets/BG_scene/bg-03.png" id="3_mq3c1"]
[ext_resource type="PackedScene" uid="uid://x8ukfuvvqph" path="res://src/entities/ash.tscn" id="4_pmvk2"]
[ext_resource type="AudioStream" uid="uid://cb4qcyhw27naw" path="res://Music/Notte nera.mp3" id="5_e1kme"]

[sub_resource type="Animation" id="Animation_jf7hp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.0784314, 0.0156863, 0.0470588, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect2:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.0784314, 0.0156863, 0.0470588, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ColorRect3:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.0784314, 0.0156863, 0.0470588, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ColorRect4:color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.0784314, 0.0156863, 0.0470588, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ColorRect5:color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.0784314, 0.0156863, 0.0470588, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("AudioStreamPlayer:volume_db")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_towfq"]
resource_name = "flashing"
length = 1.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.0784314, 0.0156863, 0.0470588, 0), Color(0.0784314, 0.0156863, 0.0470588, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect2:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.0784314, 0.0156863, 0.0470588, 0), Color(0.0784314, 0.0156863, 0.0470588, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ColorRect3:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.4, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.0784314, 0.0156863, 0.0470588, 0), Color(0.0784314, 0.0156863, 0.0470588, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ColorRect4:color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.7, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.0784314, 0.0156863, 0.0470588, 0), Color(0.0784314, 0.0156863, 0.0470588, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ColorRect5:color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(1, 1.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.0784314, 0.0156863, 0.0470588, 0), Color(0.0784314, 0.0156863, 0.0470588, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("AudioStreamPlayer:volume_db")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 1.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -30.919]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s0mwh"]
_data = {
"RESET": SubResource("Animation_jf7hp"),
"flashing": SubResource("Animation_towfq")
}

[node name="TitleScreen" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_sdxuo")
script = ExtResource("2_fqmvn")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0.611765, 0.611765, 0.611765, 1)
layout_mode = 0
offset_top = -108.0
offset_right = 500.0
offset_bottom = 668.0
texture = ExtResource("3_mq3c1")
stretch_mode = 5

[node name="Node2D" type="Node2D" parent="."]

[node name="map_bg" parent="Node2D" instance=ExtResource("3_jbddq")]
z_index = 1
scale = Vector2(0.8, 0.8)
layer_0/tile_data = PackedInt32Array(1048579, 589826, 6, 851967, 786434, 5, 786432, 851970, 5, 851968, 851970, 6, 1179647, 2, 11, 1245183, 2, 12, 1114112, 65538, 11, 1179648, 65538, 12, 1114113, 262146, 6, 1179649, 262146, 7, 1114114, 524290, 7, 1179650, 458754, 8, 1245186, 524290, 8, 1179651, 983042, 6, 1245187, 983042, 8, 1179652, 393218, 11, 1245188, 393218, 12, 1179653, 458754, 11, 1245189, 983042, 8, 1245185, 458754, 8, 1114115, 589826, 7, 983046, 262146, 1, 1048582, 262146, 2, 1114118, 262146, 3, 1179654, 262146, 4, 983047, 327682, 1, 1048583, 327682, 2, 1114119, 327682, 3, 1179655, 327682, 4, 983048, 393218, 1, 1048584, 393218, 2, 1114120, 393218, 3, 1179656, 393218, 4, 983049, 458754, 1, 1048585, 458754, 2, 1114121, 458754, 3, 1179657, 458754, 4, 983050, 524290, 1, 1048586, 524290, 2, 1114122, 524290, 3, 1179658, 524290, 4, 983051, 589826, 1, 1048587, 589826, 2, 1114123, 589826, 3, 1179659, 589826, 4, 1048588, 393218, 10, 1114124, 393218, 11, 1179660, 393218, 12, 1048589, 458754, 10, 1114125, 458754, 11, 1179661, 458754, 12, 1048590, 524290, 10, 1114126, 524290, 11, 1179662, 524290, 12, 1048591, 589826, 10, 1114127, 589826, 11, 1179663, 589826, 12, 1114128, 655362, 11, 1179664, 655362, 12, 1114129, 720898, 11, 1179665, 720898, 12, 1179666, 917506, 8, 1114131, 983042, 7, 1179667, 983042, 8, 1245203, 983042, 8, 1245202, 983042, 8, 1245201, 983042, 8, 1245200, 983042, 8, 1245199, 983042, 8, 1245198, 983042, 8, 1245197, 983042, 8, 1245196, 983042, 8, 1245195, 983042, 8, 1245194, 983042, 8, 1245193, 983042, 8, 1245192, 983042, 8, 1245191, 983042, 8, 1245190, 983042, 8, 1310734, 983042, 8, 1310733, 983042, 8, 1310732, 983042, 8, 1310731, 983042, 8, 1310735, 983042, 8, 1310736, 983042, 8, 1310737, 983042, 8, 983042, 524290, 5, 983043, 589826, 5, 1048578, 524290, 6)
layer_1/tile_data = PackedInt32Array(1179651, 458754, 7, 1179649, 327682, 6, 1114113, 327682, 5, 1179648, 262146, 6)

[node name="map_fw" parent="Node2D" instance=ExtResource("3_jbddq")]
z_index = 2
layer_0/tile_data = PackedInt32Array(1310730, 786432, 7, 1310731, 851968, 7, 1114127, 524289, 12, 1114126, 524289, 12, 1114125, 524289, 12, 1114124, 524289, 12, 1114123, 524289, 12, 1114122, 524289, 12, 1114121, 524289, 12, 1114120, 524289, 12, 1114119, 524289, 12, 1114118, 524289, 12, 1114117, 524289, 12, 1114116, 524289, 12, 1114115, 524289, 12, 1114114, 524289, 12, 1114113, 524289, 12, 1114112, 524289, 12, 1179647, 524289, 12, 1114111, 524289, 12, 1048576, 524289, 12, 1048577, 262145, 8, 1048578, 327681, 8, 1048579, 393217, 8, 1048580, 524289, 12, 1048581, 524289, 12, 1048582, 524289, 12, 1048583, 524289, 12, 1048584, 524289, 12, 1048585, 524289, 12, 1048586, 524289, 12, 1048589, 524289, 12, 1048590, 524289, 12, 1048591, 524289, 12, 983039, 65537, 7, 1048575, 65537, 12, 983040, 131073, 12, 917505, 262145, 6, 983041, 262145, 7, 851969, 262145, 5, 851970, 327681, 5, 917506, 327681, 6, 983042, 327681, 7, 851971, 393217, 5, 917507, 393217, 6, 983043, 393217, 7, 983044, 589825, 8, 983045, 655361, 8, 983046, 720897, 8, 851977, 1, 1, 917513, 1, 2, 983049, 1, 3, 851978, 65537, 1, 917514, 65537, 2, 983050, 65537, 3, 917515, 655361, 1, 983051, 655361, 2, 983047, 196609, 4, 917511, 196609, 3, 983048, 917505, 8, 1048587, 589825, 8, 983053, 655361, 8, 983055, 196609, 12, 983054, 393217, 7)
layer_1/tile_data = PackedInt32Array(983041, 196609, 12, 1048577, 458753, 12, 1048589, 720897, 8, 983054, 786433, 7, 1048590, 786433, 8, 983052, 589825, 3, 1048588, 589825, 4, 983049, 851969, 8, 1048587, 655361, 3, 983053, 655361, 11)

[node name="map_md" parent="Node2D" instance=ExtResource("3_jbddq")]
z_index = 3
layer_0/tile_data = PackedInt32Array(1376255, 196608, 0, 1441791, 65536, 0, 1507327, 65536, 0, 1572863, 65536, 0, 1638399, 65536, 0, 1703935, 65536, 0, 1310720, 196608, 0, 1376256, 65536, 0, 1441792, 65536, 0, 1507328, 65536, 0, 1572864, 65536, 0, 1638400, 65536, 0, 1310721, 196608, 0, 1376257, 65536, 0, 1441793, 65536, 0, 1507329, 65536, 0, 1572865, 65536, 0, 1638401, 65536, 0, 1310722, 196608, 0, 1376258, 65536, 0, 1441794, 65536, 0, 1507330, 65536, 0, 1572866, 65536, 0, 1638402, 65536, 0, 1310723, 196608, 0, 1376259, 65536, 0, 1441795, 65536, 0, 1507331, 65536, 0, 1572867, 65536, 0, 1638403, 65536, 0, 1310724, 196608, 0, 1376260, 65536, 0, 1441796, 65536, 0, 1507332, 65536, 0, 1572868, 65536, 0, 1638404, 65536, 0, 1310725, 196608, 0, 1376261, 65536, 0, 1441797, 65536, 0, 1507333, 65536, 0, 1572869, 65536, 0, 1638405, 65536, 0, 1310726, 196608, 0, 1376262, 65536, 0, 1441798, 65536, 0, 1507334, 65536, 0, 1572870, 65536, 0, 1638406, 65536, 0, 1310727, 196608, 0, 1376263, 65536, 0, 1441799, 65536, 0, 1507335, 65536, 0, 1572871, 65536, 0, 1638407, 65536, 0, 1310728, 196608, 0, 1376264, 65536, 0, 1441800, 65536, 0, 1507336, 65536, 0, 1572872, 65536, 0, 1638408, 65536, 0, 1310729, 196608, 0, 1376265, 65536, 0, 1441801, 65536, 0, 1507337, 65536, 0, 1572873, 65536, 0, 1638409, 65536, 0, 1310730, 196608, 0, 1376266, 65536, 0, 1441802, 65536, 0, 1507338, 65536, 0, 1572874, 65536, 0, 1638410, 65536, 0, 1310731, 196608, 0, 1376267, 65536, 0, 1441803, 65536, 0, 1507339, 65536, 0, 1572875, 65536, 0, 1638411, 65536, 0, 1310732, 196608, 0, 1376268, 65536, 0, 1441804, 65536, 0, 1507340, 65536, 0, 1572876, 65536, 0, 1638412, 65536, 0, 1310733, 196608, 0, 1376269, 65536, 0, 1441805, 65536, 0, 1507341, 65536, 0, 1572877, 65536, 0, 1638413, 65536, 0, 1310734, 196608, 0, 1376270, 65536, 0, 1441806, 65536, 0, 1507342, 65536, 0, 1572878, 65536, 0, 1638414, 65536, 0, 1310735, 196608, 0, 1376271, 65536, 0, 1441807, 65536, 0, 1507343, 65536, 0, 1572879, 65536, 0, 1638415, 65536, 0, 1769471, 0, 0, 1703936, 0, 0, 1703937, 0, 0, 1703938, 0, 0, 1703939, 0, 0, 1703940, 0, 0, 1703941, 0, 0, 1703942, 0, 0, 1703943, 0, 0, 1703944, 0, 0, 1703945, 0, 0, 1703946, 0, 0, 1703947, 0, 0, 1703948, 0, 0, 1703949, 0, 0, 1703950, 0, 0, 1703951, 0, 0, 1179647, 0, 4, 1245183, 720896, 4, 1310719, 0, 4, 1114112, 65536, 4, 1179648, 720896, 4, 1245184, 720896, 4, 1114113, 393216, 4, 1179649, 720896, 4, 1245185, 720896, 4, 1114114, 458752, 4, 1179650, 720896, 4, 1245186, 720896, 4, 1048576, 65536, 3, 1179651, 720896, 4, 1245187, 720896, 4, 1179652, 720896, 4, 1245188, 720896, 4, 1179653, 720896, 4, 1245189, 720896, 4, 1179654, 720896, 4, 1245190, 720896, 4, 1114119, 786432, 4, 1179655, 720896, 4, 1245191, 720896, 4, 1114120, 524288, 8, 1179656, 720896, 4, 1245192, 720896, 4, 1114121, 589824, 8, 1179657, 720896, 4, 1245193, 458752, 8, 1048585, 589824, 7, 1048586, 655360, 7, 1114122, 655360, 8, 1179658, 720896, 4, 1245194, 524288, 8, 1048587, 720896, 7, 1114123, 720896, 8, 1179659, 720896, 4, 1245195, 720896, 4, 1048588, 786432, 7, 1114124, 786432, 8, 1179660, 720896, 4, 1245196, 720896, 4, 1048589, 851968, 7, 1114125, 851968, 8, 1179661, 720896, 4, 1245197, 720896, 4, 1048590, 917504, 7, 1114126, 917504, 8, 1179662, 720896, 4, 1245198, 720896, 4, 1048591, 983040, 7, 1114127, 983040, 8, 1179663, 720896, 4, 1245199, 720896, 4, 1114128, 917504, 6, 1179664, 917504, 7, 1048575, 0, 2, 1114111, 0, 3, 983040, 65536, 2, 983041, 393216, 2, 1048577, 393216, 3, 983042, 458752, 2, 1048578, 458752, 3, 917504, 65536, 1, 983043, 524288, 2, 1048579, 524288, 3, 1114115, 524288, 4, 983044, 589824, 2, 1048580, 589824, 3, 1114116, 589824, 4, 983045, 655360, 2, 1048581, 655360, 3, 1114117, 655360, 4, 983046, 720896, 2, 1048582, 720896, 3, 1114118, 720896, 4, 983047, 786432, 2, 1048583, 786432, 3, 917512, 524288, 5, 983048, 524288, 6, 1048584, 524288, 7, 917513, 589824, 5, 983049, 589824, 6, 917514, 655360, 5, 983050, 655360, 6, 917515, 720896, 5, 983051, 720896, 6, 917516, 786432, 5, 983052, 786432, 6, 917517, 851968, 5, 983053, 851968, 6, 917518, 917504, 5, 983054, 917504, 6, 917519, 983040, 5, 983055, 983040, 6)
layer_1/tile_data = PackedInt32Array(917513, 589825, 5, 917514, 655361, 5, 917515, 720897, 5)

[node name="ash" parent="Node2D" instance=ExtResource("4_pmvk2")]
z_index = 4
position = Vector2(245, 605)
scale = Vector2(1.3, 1.3)
MAX_SPEED = 0.0
JUMP = 0.0
deactivate = true

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 144.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 45
text = "ASH
BLOSSOM"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
z_index = 3
custom_minimum_size = Vector2(0, 136)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -177.0
offset_bottom = -41.0
grow_horizontal = 2
grow_vertical = 0

[node name="btn_start_game" type="Button" parent="CenterContainer"]
process_mode = 3
custom_minimum_size = Vector2(120, 80)
layout_mode = 2
text = "PLAY"

[node name="CenterContainer2" type="CenterContainer" parent="."]
z_index = 3
custom_minimum_size = Vector2(0, 136)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -136.0
offset_right = -305.0
grow_horizontal = 2
grow_vertical = 0

[node name="btn_start_game" type="Button" parent="CenterContainer2"]
process_mode = 3
custom_minimum_size = Vector2(120, 80)
layout_mode = 2
text = "HARD"

[node name="CenterContainer3" type="CenterContainer" parent="."]
z_index = 3
custom_minimum_size = Vector2(0, 136)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 305.0
offset_top = -136.0
grow_horizontal = 2
grow_vertical = 0

[node name="btn_start_game" type="Button" parent="CenterContainer3"]
process_mode = 3
custom_minimum_size = Vector2(120, 80)
layout_mode = 2
text = "SOOT"

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 5.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.0784314, 0.0156863, 0.0470588, 0)

[node name="ColorRect2" type="ColorRect" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 5.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.0784314, 0.0156863, 0.0470588, 0)

[node name="ColorRect3" type="ColorRect" parent="."]
z_index = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 5.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.0784314, 0.0156863, 0.0470588, 0)

[node name="ColorRect4" type="ColorRect" parent="."]
z_index = 4
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 5.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.0784314, 0.0156863, 0.0470588, 0)

[node name="ColorRect5" type="ColorRect" parent="."]
z_index = 5
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 5.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.0784314, 0.0156863, 0.0470588, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
speed_scale = 0.8
libraries = {
"": SubResource("AnimationLibrary_s0mwh")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_e1kme")
autoplay = true

[connection signal="pressed" from="CenterContainer/btn_start_game" to="." method="_start_game"]
[connection signal="pressed" from="CenterContainer2/btn_start_game" to="." method="_start_game" binds= [1]]
[connection signal="pressed" from="CenterContainer3/btn_start_game" to="." method="_start_game" binds= [2]]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
